# Cealgull-Frontend

./: .clangd  .env.vault  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  App.tsx  README.md  app.json  babel.config.js  commitlint.config.js  jest.config.ts  jest.setup.js  package.json  tsconfig.json
.github/workflows/: app-test.yml  eas-build.yml  eas-update.yml
.husky/: pre-commit
__mocks__/: react-native-safe-area-context.js
__test__/: App.test.tsx
__test__/__snapshots__/: App.test.tsx.snap
__test__/response/: componentTestData.json  forum_topic.json
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
assets/sample/: index.ts  userInfo.json
cpp/: CMakeLists.txt
cpp/include/: native.h
cpp/include/crypto/: ringsig.h
cpp/include/encoding/: base64.h
cpp/include/native/: modprovider.h  webassembly.h  webcrypto.h
cpp/src/: native.cc
cpp/src/crypto/: ringsig.cc
cpp/src/encoding/: base64.cc
cpp/src/native/: modprovider.cc  webassembly.cc  webcrypto.cc
ios/: Podfile
ios/cealgull/: AppDelegate.mm  Info.plist
ios/cealgull.xcodeproj/: project.pbxproj
src/: Cealgull.tsx
src/@types/: basic.d.ts  env.d.ts  navigation.d.ts  navigation.ts  returnProps.d.ts  service.d.ts
src/Resources/: RootStackData.tsx
src/View/: HomeView.tsx  PersonView.tsx  PublishView.tsx  TopicView.tsx
src/components/: HeaderBarWrapper.tsx  ImageList.tsx  Loadable.tsx  OptionItem.tsx  PersonCard.tsx  PostEditor.tsx  ReplyCard.tsx  UserAvatar.tsx
src/config/: cealgull.config.json  index.ts
src/hooks/: useImagePicker.ts  (+2 more)
(+128 files in other folders)
